
syntax = "proto2";

package mesop.components.badge;

message BadgeType {
  optional string color = 1;
  optional bool overlap = 2;
  optional bool disabled = 3;
  optional string position = 4;
  optional string content = 5;
  optional string description = 6;
  optional string size = 7;
  optional bool hidden = 8;
}
